# Vibe-SGL

./: .gitmodules  LICENSE  README.md  TESTING.md  overview.md  pyproject.toml  pytest.ini
.claude/skills/mini-SGL/: SKILL.md
examples/: chunked_prefill_example.py  continuous_batching_example.py
openspec/changes/lightweight-llm-inference-engine/: design.md  proposal.md  tasks.md
openspec/changes/lightweight-llm-inference-engine/specs/chunked-prefill/: spec.md
openspec/changes/lightweight-llm-inference-engine/specs/continuous-batching/: spec.md
tests/: conftest.py  data.py  test_data.py  test_fixtures.py
tests/batch/: test_batch_manager.py  test_chunk_manager.py  test_request.py
tests/cache/: test_radix_cache.py  test_radix_tree.py
tests/core/: test_inference_engine.py
tests/distributed/tp/: debug_weight_loading.py  test_parallel_linear.py  test_tp_e2e_full_model.py  test_tp_infrastructure.py  test_tp_multiprocess.py  test_tp_qwen3_attention.py  test_tp_qwen3_mlp.py  test_tp_weight_loading.py
tests/memory/: test_memory_pool.py  test_paged_allocator.py  test_paged_attention.py
tests/models/qwen3/: test_attention_kv_cache.py  test_attention_output_projection.py  test_attention_projections.py  test_attention_rope.py  test_attention_validation.py  test_config.py  test_decoder_layer.py  test_embedding.py  test_end_to_end.py  test_ffn_forward.py  test_ffn_initialization.py  test_ffn_swiglu.py  test_ffn_validation.py  test_gqa.py  test_lm_head.py  test_model.py  test_rmsnorm.py  test_rope.py  test_weight_loading.py
tests/scheduler/: test_policy.py
tests/utils/: __init__.py  comparison.py  distributed.py  test_comparison.py  test_distributed.py
vibe_sgl_lite/: __init__.py
vibe_sgl_lite/batch/: __init__.py  batch_manager.py  chunk_manager.py  request.py
vibe_sgl_lite/cache/: __init__.py  radix_cache.py  radix_tree.py
vibe_sgl_lite/core/: __init__.py  inference_engine.py
vibe_sgl_lite/distributed/: __init__.py
vibe_sgl_lite/distributed/ep/: __init__.py
vibe_sgl_lite/distributed/tp/: __init__.py  infrastructure.py  parallel_linear.py
vibe_sgl_lite/memory/: __init__.py  memory_pool.py  paged_allocator.py  paged_attention.py
vibe_sgl_lite/models/: __init__.py
vibe_sgl_lite/models/qwen3/: __init__.py  attention.py  config.py  decoder_layer.py  embedding.py  ffn.py  lm_head.py  model.py  rmsnorm.py  rope.py  weight_loader.py
vibe_sgl_lite/sampling/: __init__.py  sampling.py
vibe_sgl_lite/scheduler/: __init__.py  fcfs_policy.py  lpm_policy.py  policy.py
vibe_sgl_lite/utils/: __init__.py
(+10 files in other folders)
